--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         <label for="">小球速度</label>
         <input class='change-input' type="range" data-name="ball" min='1' max='20' value="5">
         <br/>
-        <label for="">点击c重新开始,点击键盘123选关卡</label>
+        <label for="">点击c重新开始,点击键盘
+            <span class='level'>123</span>
+            选关卡</label>
         <br/>
         <label for="">点击P暂停后可拖动小球</label>
         <br/>
