--- a/airplane.html
+++ b/airplane.html
@@ -72,14 +72,14 @@
             </div>
         </div>
     </div>
-    <script src="./static/js/level.js"></script>
-    <script src="./static/js/util.js"></script>
-    <script src="./static/js/ball.js"></script>
-    <script src="./static/js/block.js"></script>
-    <script src="./static/js/paddle.js"></script>
-    <script src="./static/js/draw.js"></script>
-    <script src="./static/js/editor.js"></script>
-    <script src="./static/js/index.js"></script>
+    <script src="./brick/js/level.js"></script>
+    <script src="./brick/js/util.js"></script>
+    <script src="./brick/js/ball.js"></script>
+    <script src="./brick/js/block.js"></script>
+    <script src="./brick/js/paddle.js"></script>
+    <script src="./brick/js/draw.js"></script>
+    <script src="./brick/js/editor.js"></script>
+    <script src="./brick/js/index.js"></script>
 </body>
 
 </html>
