--- a/airplane.html
+++ b/airplane.html
@@ -13,20 +13,23 @@
             padding: 0;
             width: 100%;
             height: 100%;
+            overflow: hidden;
         }
 
         #game {
             display: block;
-            width: 400px;
-            height: 500px;
+            width: 480px;
+            height: 850px;
             margin: 0 auto;
             border: 1px solid #eee;
             box-sizing: border-box;
+            margin-top: 100px;
         }
 
         .input-list {
             margin: auto;
             text-align: center;
+            display: none;
         }
 
         .editor-input {
@@ -40,46 +43,13 @@
 </head>
 
 <body>
-    <canvas id='game' width="600" height="750"></canvas>
-    <div class="input-list">
-        <label for="">挡板速度</label>
-        <input class='change-input' type="range" data-name="paddle" min='1' max='20' value="5">
-        <br/>
-        <label for="">小球速度</label>
-        <input class='change-input' type="range" data-name="ball" min='1' max='20' value="5">
-        <br/>
-        <label for="">点击c重新开始,点击键盘
-            <span class='level'>123</span>
-            选关卡</label>
-        <br/>
-        <label for="">点击P暂停后可拖动小球</label>
-        <br/>
-        <div class="editor">
-            <button id='editor-btn'>关卡编辑</button>
-            <br/>
-            <div class="editor-contain">
-                <label for="">关卡</label>
-                <input class="editor-input" type="number" min='4' max='9' value="4">
-                <label for="">砖块生命</label>
-                <select id='life-select'>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
-                <br/>
-                <button class="btn-cancel">取消</button>
-                <button class="btn-complete">完成</button>
-            </div>
-        </div>
-    </div>
-    <script src="./brick/js/level.js"></script>
-    <script src="./brick/js/util.js"></script>
-    <script src="./brick/js/ball.js"></script>
-    <script src="./brick/js/block.js"></script>
-    <script src="./brick/js/paddle.js"></script>
-    <script src="./brick/js/draw.js"></script>
-    <script src="./brick/js/editor.js"></script>
-    <script src="./brick/js/index.js"></script>
+    <canvas id='game' width="480" height="850"></canvas>
+    <script src="./airplane/js/game.js"></script>
+    <script src="./airplane/js/image.js"></script>
+    <script src="./airplane/js/base_scene.js"></script>
+    <script src="./airplane/js/main_scene.js"></script>
+    <script src="./airplane/js/title_scene.js"></script>
+    <script src="./airplane/js/index.js"></script>
 </body>
 
 </html>
