--- a/airplane.html
+++ b/airplane.html
@@ -29,8 +29,13 @@
         .input-list {
             margin: auto;
             text-align: center;
-            display: none;
         }
+
+        label {
+            display: block;
+            margin-top: 5px;
+        }
+
 
         .editor-input {
             width: 30px;
@@ -44,6 +49,7 @@
 
 <body>
     <canvas id='game' width="480" height="850"></canvas>
+    <div class="input-list"></div>
     <script src="./airplane/js/game.js"></script>
     <script src="./airplane/js/image.js"></script>
     <script src="./airplane/js/base_scene.js"></script>
