--- a/airplane.html
+++ b/airplane.html
@@ -12,7 +12,7 @@
                 padding: 0;
                 width: 100%;
                 height: 100%;
-                overflow: hidden;
+                /* overflow: hidden; */
             }
 
             #game {
@@ -22,7 +22,6 @@
                 margin: 0 auto;
                 border: 1px solid #eee;
                 box-sizing: border-box;
-                margin-top: 100px;
             }
 
             .input-list {
